.text-body left margin to avoid side overlap: site.css

--- a/RudysCorner.Website/wwwroot/css/site.css
+++ b/RudysCorner.Website/wwwroot/css/site.css
@@ -6,6 +6,10 @@ div.container {
     margin: auto;
 }
 
+.text-body {
+    margin-left: 200px;
+}
+
 .img-main {
     width: 80%;
 }﻿
